--- a/css/header.css
+++ b/css/header.css
@@ -1,19 +1,18 @@
-.block_1{
-    height: 750px;
-    background-image: url(../image/photo/Rectangle1copy2.svg), url(../image/photo/test.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height: 750px;
-}
-.content{
+
+header{
     display: flex;
     flex-direction: row;
-    width: 1440px;
+    max-width: 1440px;
     margin: 0 auto;
     justify-content: space-between;
     height: 80px;
     align-items: flex-end;
     color: #ffffff;
+}
+.content{
+    background-image: url(../image/photo/Rectangle1copy2.svg), url(../image/photo/test.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .icon_text {
     display: flex;
@@ -46,8 +45,6 @@
     font-size: 15px;
     font-family: RegularSemiBold;
     color: #fff;
-
-    
 }
 .info a:last-child{
     margin-right: 0px;
@@ -78,6 +75,26 @@
     transform: scale(1.1);
 }
 
+.info_2{
+    display: none;
+    height: 25px;
+}
+.info_2 button{
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    color: #fff;
+
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none; 
+}
+.info_2 button:active{
+    transition: 0.3s;
+    background-color: #2bf6d1;
+    transform: scale(1.1);
+}
+
 @font-face {
     font-family: RegularSemiBold;
     src: url(../text/Raleway-SemiBold.ttf);
@@ -91,4 +108,13 @@
 @font-face {
     font-family: RalewayRegular;
     src: url(../text/Raleway-Regular.ttf);
+}
+
+@media screen and (max-width: 900px) {
+    .info{
+        display: none;
+    }
+    .info_2{
+        display: flex;
+    }
 }
