--- a/css/info.css
+++ b/css/info.css
@@ -1,9 +1,10 @@
 .content_info{
     display: flex;
     margin: 0 auto;
-    width: 1440px;
+    max-width: 1440px;
     height: 100%;
     margin-top: 160px;
+    padding-bottom: 180px;
 }
 .info_row{
     display: flex;
@@ -13,17 +14,18 @@
 .info_label{
     font-size: 55px;
     color: #fff;
-    width: 500px;
+    max-width: 500px;
     font-family: RalewayExtraBold;
     text-transform: uppercase;
-    line-height: 60px;
+    line-height: 70px;
 }
 .info_text{
     font-size: 18px;
     font-family: RalewayRegular;
-    width: 580px;
-    line-height: 30px;
-    color: #fff;
+    max-width: 580px;
+    line-height: 35px;
+    margin-top: 10px;
+    color: #e0fbf7;
 }
 .info_button_row{
     -moz-user-select: none;
@@ -65,6 +67,7 @@
 }
 .video video{
     max-width: 600px;
+    max-height: 100%;
     border-radius: 5px;
     border: 2px solid #061e37;
     box-shadow: 13px 13px 25px 4px rgba(34, 60, 80, 0.3);
@@ -77,4 +80,55 @@
 @font-face {
     font-family: RalewayBold;
     src: url(../text/Raleway-Bold.ttf);
+}
+
+@media screen and (max-width: 1200px) {
+    .info_row{
+        flex-direction: column;
+        margin: 0px 30px 0px 30px;
+        min-width: 320px;
+    }
+    .info_label{
+        margin: 0 auto;
+        text-align: center;
+        max-width: 500px;
+        font-size: 45px;
+    }
+    .info_text{
+        margin: 0 auto;
+        max-width: 500px;
+        text-align: justify;
+    }
+    .info_button_row{
+        max-width: 500px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .info_button_row button{
+        margin-bottom: 30px;
+    }
+    .content{
+        min-width: 370px;
+    }
+    .video{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+    .video video{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 396px) {
+    .info_button_row button:last-child{
+        margin: 30px 0px 30px 0px;
+    }
+    .info_button_row button{
+        margin-bottom: 0px;
+    }
+    .info_button_row{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
