--- a/css/header.css
+++ b/css/header.css
@@ -12,8 +12,7 @@ header{
 .content{
     background-image: url(../image/photo/Rectangle1copy2.svg), url(../image/photo/test.png);
     background-repeat: no-repeat;
-    /* background-size: cover; */
-    background-size: 600%;
+    background-size: cover;
     min-width: 450px;
     overflow-x: hidden;
     padding: 0px 30px;
