--- a/css/info.css
+++ b/css/info.css
@@ -25,6 +25,7 @@
     max-width: 580px;
     line-height: 35px;
     margin-top: 10px;
+    margin-right: 15px;
     color: #e0fbf7;
 }
 .info_button_row{
@@ -65,12 +66,50 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
-.video video{
-    max-width: 600px;
-    max-height: 100%;
+.video{
+    width: 600px;
+    height: 340px;
     border-radius: 5px;
+
+}
+.video video{
+    position: absolute;
+    width: 600px;
+    height: 340px;
+    border-radius: 5px;
+    z-index: 1;
+    min-width: 450px;
+    object-fit: fill;
     border: 2px solid #061e37;
     box-shadow: 13px 13px 25px 4px rgba(34, 60, 80, 0.3);
+    z-index: 1;
+}
+
+.video button{
+    position: absolute;
+    background-position: center;
+    background-image:url(../image/photo/play_arrow.png), url(../image/photo/play_moution.png), url(../image/photo/Rounded_BG.png) ,url(../image/photo/Rounded_2.png);
+    background-repeat: no-repeat;
+    background-position: center 45%;
+    background-color: transparent;  
+    min-width: 450px;
+
+    background-size: auto, auto, cover, cover;
+    border-radius: 5px;
+    width: inherit;
+    height: inherit;
+    object-fit:contain;
+    z-index: 2;
+    border: 1px solid red;
+}
+.video label{
+    position: relative;
+    top: 11%;
+    font-size: 12px;
+    font-family: RalewayBold;
+    color: #061e37;
+    text-transform: uppercase;
+    z-index: 3;
 }
 @font-face {
     font-family: RalewayExtraBold;
@@ -111,10 +150,41 @@
         display: flex;
         width: 100%;
         justify-content: center;
+        height: 270px;
     }
     .video video{
-        width: 100%;
+        position: sticky;
+        height: auto;
+        border: 5px solid black;
+        margin-left: 30px;
+        margin-right: 30px;
+        min-width: 450px;
+        max-width: 450px;
     }
+    .video button{
+        min-width: 450px;
+        max-width: 450px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .video video{
+        min-width: 350px;
+        max-width: 350px;
+        height: 200px;
+    }
+    .video{
+        height: 200px;
+    }
+    .video button{
+        min-width: 350px;
+        max-width: 350px;
+        height: 200px;
+    }
+    .video label{
+        top: 20%;
+    }
+    
 }
 @media screen and (max-width: 456px) {
     .info_button_row button:last-child{
