--- a/css/info.css
+++ b/css/info.css
@@ -154,7 +154,7 @@
     .video video{
         position: sticky;
         height: auto;
-        border: 5px solid black;
+        border: 5px solid #061e37;
         margin-left: 30px;
         margin-right: 30px;
         min-width: 450px;
