--- a/css/services.css
+++ b/css/services.css
@@ -3,7 +3,6 @@
     min-width: 450px;
     background-color: #fff;
     justify-content: center;
-    height: 870px;
 }
 .services {
     display: flex;
@@ -11,6 +10,7 @@
     max-width: 1440px;
     min-width: 450px;
     text-align: center;
+    margin-bottom: 100px;
 }
 .services_label {
     font-size: 50px;
@@ -91,7 +91,6 @@
     font-family: RalewayRegular;
     color: rgb(6, 30, 55);
     line-height: 1.667;
-    /* border: 1px solid red; */
 }
 
 .statistick:hover{
@@ -102,4 +101,33 @@
 
 .statistick:last-child{
     margin-bottom: 0px;
+}
+
+@media screen and (max-width: 831px) {
+    .statistick:hover{
+        height: 300px;
+    }
+}
+@media screen and (max-width: 668px) {
+    .statistick:hover{
+        height: 320px;
+    }
+}
+@media screen and (max-width: 628px) {
+    .statistick_block{
+        display: flex;
+        flex-direction: column;
+    }
+    .statistick_block img{
+        margin-bottom: 30px;
+    }
+    .statistick:hover{
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 583px) {
+    .statistick:hover{
+        height: 450px;
+    }
 }
