--- a/css/customers.css
+++ b/css/customers.css
@@ -48,6 +48,10 @@
     height: 55px;
     text-transform: uppercase;
     font-family: RalewayBold;
+
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none; 
 }
 .customers_btn button:active{
     transition: 0.5s;
@@ -76,9 +80,18 @@
     height: 50px;
     width: 100%;
     align-content: right;
+
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none; 
 }
 .reviews_button img{
     margin-left: 100px;
+}
+.reviews_button{
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none; 
 }
 .reviews_button button:active{
     transition: 0.3s;
@@ -96,6 +109,10 @@
     margin-right: 50px;
     align-self: center;
     justify-content: center;
+
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none; 
 }
 .reviews_block {
     border-radius: 5px;
@@ -103,6 +120,10 @@
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
     width: 100%;
     margin-right: 30px;
+
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none; 
 }
 .reviews_label {
     margin-bottom: 20px;
