--- a/css/services.css
+++ b/css/services.css
@@ -79,6 +79,7 @@
     display: flex;
     margin: 0px 25px;
     align-items: center;
+    justify-content: center;
 }
 .statistick_img img{
     width: 250px;
@@ -95,43 +96,19 @@
     font-family: RalewayRegular;
     color: rgb(6, 30, 55);
     line-height: 1.667;
-}
-
-.statistick:hover{
-    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
-    height: 220px;
-    transition: 1s;
+    border: 1px solid red;
 }
 
 .statistick:last-child{
     margin-bottom: 0px;
 }
 
-@media screen and (max-width: 831px) {
-    .statistick:hover{
-        height: 300px;
-    }
-}
-@media screen and (max-width: 668px) {
-    .statistick:hover{
-        height: 320px;
-    }
-}
-@media screen and (max-width: 628px) {
+@media screen and (max-width: 633px) {
     .statistick_block{
         display: flex;
         flex-direction: column;
     }
     .statistick_block img{
         margin-bottom: 30px;
-    }
-    .statistick:hover{
-        height: 400px;
-    }
-}
-
-@media screen and (max-width: 583px) {
-    .statistick:hover{
-        height: 450px;
     }
 }
