--- a/css/team.css
+++ b/css/team.css
@@ -10,6 +10,7 @@
     max-width: 1440px;
     overflow: hidden;
     margin-bottom: 100px;
+    height: 650px;
 }
 .team_content_text {
     text-align: center;
@@ -124,5 +125,11 @@
 @media screen and (max-width: 545px) {
     .team_image_row{
         flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .team_content{
+        height: 850px;
     }
 }
